--- a/lands/App.xaml
+++ b/lands/App.xaml
@@ -1,5 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Application xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="lands.App">
+<?xml version="1.0" encoding="utf-8"?>
+<Application xmlns="http://xamarin.com/schemas/2014/forms" 
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+             xmlns:infra="clr-namespace:lands.Infrastructure"
+             x:Class="lands.App">
     <Application.Resources>
+
+        <!--Aplication Resorce Dictionary-->
+        <ResourceDictionary>
+            <infra:InstanceLocator x:Key="Locator"/>
+            
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
